2009-09-14  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (usercfg_add_account_settings):
	Document the new 'service' configuration option.

	* src/uimisc.c
	(usercfg_add_download_settings)
	* src/controller.c
	(check_session_thread, check_session):
	Change references to Last.fm for more generic messages.

	* README
	* debian/control.*
	* vagalume.1:
	Explain that Vagalume supports Last.fm-compatible services.

2009-09-08  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (bus_call):
	Ignore GST_MESSAGE_STREAM_STATUS

2009-09-08  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (vgl_controller_class_init):
	Use an int marshaller for the track-stopped signal

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c:
	Make tagwin a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c:
	Make RspSession a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/imstatus.c
	* src/playlist.[ch]
	* src/protocol.c
	* src/scrobbler.c
	* src/uimisc.c
	* src/vgl-tray-icon.c:
	Make LastfmTrack a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/lastfm-ws.[ch]
	* src/scrobbler.c
	* src/uimisc.c:
	Make LastfmWsSession a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/lastfm-ws.c
	* src/scrobbler.c
	* src/userconfig.c
	* src/vgl-server.[ch]:
	Make VglServer a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am
	* src/vgl-object.[ch]:
	VglObject, a very minimalistic implementation of ref-counted
	objects.

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-server.c:
	Define VglServerData struct for storing built-in server
	information.

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_open_usercfg)
	* src/uimisc.c
	(ui_usercfg_window, usercfg_add_account_settings)
	(+usercfg_create_server_combobox):